<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.satansin.android.compath.FeedActivity" >
    
    <item
        android:id="@+id/action_location_selection"
        android:orderInCategory="100"
        android:title="@string/action_location_selection"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_create_group"
        android:orderInCategory="100"
        android:title="@string/action_create_group"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_create_location"
        android:orderInCategory="100"
        android:title="@string/action_create_location"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_personal_settings"
        android:orderInCategory="100"
        android:title="@string/action_personal_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>
