<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.satansin.android.compath.PersonalSettingsActivity" >
    
    <RelativeLayout
        android:id="@+id/mygroups_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_settings_icon"
        android:layout_marginTop="120dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/mygroups_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mygroups_arrow"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="36dp"
            android:text="@string/mygroups_personal_settings" />

        <ImageView
            android:id="@+id/mygroups_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/image_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/setting_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignTop="@+id/mygroups_relative_layout"
        android:background="#ccc" >
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignBottom="@+id/mygroups_relative_layout"
        android:background="#ccc" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/favorite_groups_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mygroups_relative_layout"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/favorite_groups_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/favorite_groups_arrow"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="36dp"
            android:text="@string/favorite_groups_personal_settings" />

        <ImageView
            android:id="@+id/favorite_groups_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/image_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/setting_arrow" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignBottom="@+id/favorite_groups_relative_layout"
        android:background="#ccc" >
    </LinearLayout>

    <ImageView
        android:id="@+id/personal_settings_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/image_content_description"
		android:background="#eee" />
    
    <TextView
        android:id="@+id/personal_settings_usrname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_settings_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:id="@+id/personal_settings_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_settings_usrname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />
    
    <!-- 
    <Button
        android:id="@+id/change_head_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "更换头像"
        android:textSize="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/personal_settings_icon">
        
    </Button>

    <TextView
        android:id="@+id/personal_settings_usrname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_head_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:id="@+id/personal_settings_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_settings_usrname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />
     -->

    <ProgressBar
        android:id="@+id/personal_settings_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>